stop request listing collapsing on small screens

--- a/assets/stylesheets/responsive/custom.scss
+++ b/assets/stylesheets/responsive/custom.scss
@@ -345,6 +345,7 @@ color:#005068;
 .request_listing {
   span.desc {
     background: image-url('quote-marks.png') no-repeat;
+    min-height: 2em;
   }
 
   span.bottomline {
